test_suite/tests/ui/duplicate-attribute/rename-ser-rename-ser.stderr
error: duplicate serde attribute `rename`
 --> $DIR/tests/ui/duplicate-attribute/rename-ser-rename-ser.rs:5:38
  |
5 |     #[serde(rename(serialize = "x"), rename(serialize = "y"))]
  |                                      ^^^^^^
