test_suite/tests/ui/duplicate-attribute/rename-ser-rename-ser.rs
use serde_derive::Serialize;

#[derive(Serialize)]
struct S {
    #[serde(rename(serialize = "x"), rename(serialize = "y"))]
    x: (),
}

fn main() {}
